<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2011 Adam Nybäck

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Otentico</string>
    <string name="intro_message">This is a simple app to read various tags (NDEF, RFID, FeliCa, ISO 14443, etc).\n\nYou use it by holding a tag/card against the back of your device.\n\nPlease let me know if you want me to change how the data is displayed. Also send me an e-mail (adam@anyro.se) if you have any problems with the app and I\'ll let you know when I\'ve fixed it. You can also see the source code and report issues at https://github.com/nadam/nfc-reader.\n\nIf you can\'t read any tag, please try some of the other NFC apps on Google Play and let me know if this app is the only one not working. Thanks!\n\n/Adam</string>
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>

    <string name="home_screen_message_0">Welcome to Otentico</string>
    <string name="home_screen_message_1">Scan NFC Tag</string>
    <string name="home_screen_message_2">Place Phone close to NFC Tag</string>

    <string name="scan_results_text">Scan Result</string>
    <string name="auth_screen_message_1">Authenticated by</string>
    <string name="product_information_button">Product information</string>
    <string name="brand_info_button">Brand\ninformation</string>


    <string name="not_auth_screen_message_0">Scan Result</string>
    <string name="not_auth_screen_message_1">Oops...</string>
    <string name="not_auth_screen_message_2">This product can’t\n  be authenticated</string>

    <string name="not_auth_button_1">Report\nUnauthentic</string>
    <string name="not_auth_button_2">Request Future\nAuthentication</string>

    <string name="product_information_screen_message_1">Product information</string>

    <string name="footer_message">Powered by <b>Otentico</b></string>
    <string name="footer_message_first_word">Powered by </string>
    <string name="footer_message_second_word">Otentico</string>

    <string name="drawer_icon_linked_in">&#xe80e;</string>
    <string name="drawer_icon_blog">&#xe81e;</string>
    <string name="drawer_icon_git_hub">&#xe808;</string>
    <string name="drawer_icon_instagram">&#xe80c;</string>

    <string name="drawer_title_linked_in">LinkedIn</string>
    <string name="drawer_title_blog">Blog</string>
    <string name="drawer_title_git_hub">GitHub</string>
    <string name="drawer_title_instagram">Instagram</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="download">download</string>
    <string name="done">done</string>
    <string name="scan_history_text">Scan History</string>
    <string name="term_of_use_text">Terms of Use</string>
    <string name="version_text">Version: 1.0.1</string>
    <string name="contact_otentico_text">otenti.co</string>
    <string name="empty_history">Scan History is empty...</string>

</resources>