<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/list"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	android:orientation="vertical" >

	<View
		android:layout_width="1dp"
		android:layout_height="30dp" >
	</View>

	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:background="@color/title_background">
	
		
		<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
			
			<View
				android:layout_width="1dp"
				android:layout_height="10dp" >
			</View>			
				
			<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="@string/not_auth_screen_message_0"
					android:textColor="@color/text"
					android:textSize="30dp"
					android:textStyle="normal"
					android:fontFamily="sans-serif" />		
					 
			<View
				android:layout_width="1dp"
				android:layout_height="10dp" >
			</View>					
	
		</LinearLayout>
			
	</LinearLayout>
	
	<View
		android:layout_width="1dp"
		android:layout_height="72dp" >
	</View>	
	
	<ImageView
		android:layout_width="90dp"
		android:layout_height="90dp"
		android:layout_gravity="center"
		android:src="@drawable/negative_icon_500" />

	
	<View
		android:layout_width="1dp"
		android:layout_height="20dp" >
	</View>
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/not_auth_screen_message_1"
		android:textColor="@color/text"
		android:textSize="30dp"
		android:textStyle="bold" 
		android:fontFamily="sans-serif" />

	<View
		android:layout_width="1dp"
		android:layout_height="20dp" >
	</View>
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/not_auth_screen_message_2"
		android:textColor="@color/text"
		android:textSize="25dp"
		android:gravity="center_horizontal" 
		android:fontFamily="sans-serif" />

	<View
		android:layout_width="1dp"
		android:layout_height="50dp" >
	</View>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/background"
		android:orientation="horizontal" >

		<Button
			android:layout_weight="0.5"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/not_auth_button_1" />

		<Button
			android:layout_weight="0.5"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/not_auth_button_2" />
		
	</LinearLayout>
	
	<View
		android:layout_width="1dp"
		android:layout_height="20dp" >
	</View>
	
	<!--
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:background="@color/footer_background">
	
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:layout_gravity="center|bottom"
			android:src="@drawable/powered_by_otentico" />

	</LinearLayout>
	-->
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:background="@color/title_background">
	
		
		<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
			
			<View
				android:layout_width="1dp"
				android:layout_height="5dp" >
			</View>			
				
			<TextView
					android:id="@+id/title"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:text="@string/footer_message"
					android:textColor="@color/text"
					android:textSize="15dp"
					android:textStyle="normal"			
					android:fontFamily="sans-serif" />		
					 
			<View
				android:layout_width="1dp"
				android:layout_height="5dp" >
			</View>					
	
		</LinearLayout>
			
	</LinearLayout>
	
	

</LinearLayout>