<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ot">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <se.anyro.nfc_reader.font.RobotoTextView
        android:id="@+id/empty"
        style="@style/TextViewAppearance.Headline1"
        android:layout_gravity="center"
        android:visibility="gone"
        android:padding="1dp"
        android:text="@string/empty_history"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">


        <se.anyro.nfc_reader.font.RobotoTextView
            style="@style/TextViewAppearance.Caption2"
            android:layout_gravity="center"
            android:padding="1dp"
            android:text="@string/footer_message_first_word"
            android:textSize="12sp" />

        <se.anyro.nfc_reader.font.RobotoTextView
            style="@style/TextViewAppearance.Caption3"
            android:layout_gravity="center"
            android:padding="1dp"
            android:text="@string/footer_message_second_word"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">


        <ListView
            android:listSelector="@drawable/list_selector"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recent_list" />

        <include
            layout="@layout/list_view"
            android:layout_width="@dimen/drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start" />
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>